# Jeoparty

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  pyproject.toml  run.sh  test.sh
resources/: schema.sql
resources/locales/: danish.json  english.json
src/: insert_old_data.py  main.py  query_db.py  recreate_database.py  scripts.py  test.py
src/api/: config.py  database.py  enums.py  stage.py
src/api/orm/: base.py  models.py
src/app/routes/: contestant.py  dashboard.py  login.py  presenter.py  shared.py  socket.py  util.py
src/app/static/css/: contestant_style.css  dashboard_style.css  presenter_style.css  question_style.css  style.css
src/app/static/js/: contestant.js  contestant_game.js  contestant_lobby.js  presenter.js  question_pack.js
src/app/templates/: login.html  logo.html  question_view.html
src/app/templates/contestant/: game.html  head.html  lobby.html
src/app/templates/dashboard/: create_game.html  create_pack.html  head.html  home.html  question_pack.html
src/app/templates/presenter/: endscreen.html  finale.html  footer.html  head.html  lobby.html  question.html  selection.html
src/jeoparty/api/: config.py  database.py  enums.py
src/jeoparty/api/orm/: models.py
src/jeoparty/app/routes/: contestant.py  dashboard.py  login.py  presenter.py  shared.py  socket.py
src/jeoparty/app/static/: secret.json
src/jeoparty/app/static/css/: contestant_style.css  dashboard_style.css  presenter_style.css  question_style.css  style.css
src/jeoparty/app/static/js/: contestant_game.js  contestant_lobby.js  dashboard.js  presenter.js  question_pack.js  wake_lock.js
src/jeoparty/app/templates/: login.html  logo.html  question_view.html
src/jeoparty/app/templates/contestant/: game.html  head.html  kicked.html  lobby.html  nogame.html
src/jeoparty/app/templates/dashboard/: create_game.html  create_pack.html  head.html  home.html  question_pack.html
src/jeoparty/app/templates/presenter/: cheat_sheet.html  cheatsheet.html  connection_status.html  endscreen.html  finale.html  footer.html  head.html  (+3 more)
src/jeoparty/migrations/: env.py  script.py.mako
src/jeoparty/migrations/versions/: 9e063632a2ba_recreate_all.py  9f34d3373d63_added_theme_table.py
tests/: __init__.py  browser_context.py  config.py  conftest.py  test_create_game.py  test_create_pack.py  test_endscreen.py  test_files.py  test_finale.py  test_full_game.py  test_lobby.py  test_locales.py  test_powerups.py  test_question.py  test_questions.py  test_selection.py  test_themes.py
(+23 files in other folders)
