[project]
name = "jeopardy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikkel Sørensen", email = "m_hooge@hotmail.com"},
]
dependencies = [
    "mhooge-flask @ file:///${PROJECT_ROOT}/../scripts/mhooge_flask",
    "flask-socketio>=5.5.1",
    "sqlalchemy>=2.0.43",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "marshmallow-sqlalchemy>=1.4.2",
    "pytest-asyncio>=1.2.0",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "opencv-python>=4.12.0.88",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

[tool.pdm]
distribution = false
