[project]
name = "jeoparty"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikkel Sørensen", email = "m_hooge@hotmail.com"},
]
dependencies = [
    "mhooge-flask @ git+https://github.com/mhso/mhooge-flask.git",
    "flask-socketio>=5.5.1",
    "sqlalchemy>=2.0.43",
    "marshmallow-sqlalchemy>=1.4.2",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "alembic>=1.17.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "opencv-python-headless>=4.12.0.88",
    "playwright>=1.56.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

[tool.pdm]
distribution = false
